# mpz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  lint.sh  pre-commit-check.sh  test_output.txt
crates/circuits/: Cargo.toml
crates/circuits-core/: Cargo.toml
crates/circuits-core/bristol/: aes_128_key_schedule.txt  aes_128_post_key_schedule.txt
crates/circuits-core/src/: builder.rs  circuits.rs  components.rs  lib.rs  ops.rs  parse.rs
crates/circuits-core/src/circuits/: blake3.rs
crates/circuits-data/: Cargo.toml  build.rs
crates/circuits-data/src/: lib.rs
crates/circuits-new/: Cargo.toml
crates/circuits-new/benches/: sha256.rs
crates/circuits-new/fuzz/: Cargo.toml
crates/circuits-new/fuzz/fuzz_targets/: sha256_compress.rs
crates/circuits-new/src/: fixtures.rs  lib.rs  sha256.rs
crates/circuits/benches/: sha256.rs
crates/circuits/circuits/bristol/: aes_128_reverse.txt  sha256_reverse.txt
crates/circuits/data/: Cargo.toml  build.rs
crates/circuits/data/src/: lib.rs
crates/circuits/fuzz/: Cargo.toml
crates/circuits/fuzz/fuzz_targets/: sha256_compress.rs
crates/circuits/src/: circuits.rs  lib.rs  ops.rs  parse.rs  sha256.rs
crates/circuits/src/circuits/: blake3.rs
crates/cointoss/: Cargo.toml
crates/cointoss/src/: lib.rs
crates/common/: Cargo.toml
crates/common/benches/: io.rs
crates/common/src/: context.rs  executor.rs  future.rs  id.rs  ideal.rs  io.rs  lib.rs  load_balance.rs  mux.rs  session.rs  task.rs  thread_pool.rs
crates/common/src/context/: mt.rs
crates/common/src/sync/: async_mutex.rs  barrier.rs  mod.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: aes.rs  cggm.rs  ggm.rs  lpn.rs  prg.rs
crates/core/src/: aes.rs  block.rs  cggm.rs  commit.rs  ggm.rs  lib.rs  lpn.rs  prg.rs  prp.rs  rand.rs  tkprp.rs
crates/cost-explorer-sample/: Cargo.toml
crates/cost-explorer-sample/fixtures/: sample.json
crates/fields/: Cargo.toml
crates/fields/benches/: fields.rs
crates/fields/src/: bmul.rs  bmul_simd.rs  gf2.rs  gf2_128.rs  gf2_64.rs  lib.rs  p256.rs  spread.rs  test_data.rs
crates/fields/src/gf2_128/: autodetect.rs  soft.rs  wasm.rs  x86.rs
crates/fields/src/gf2_64/: soft.rs  wasm.rs  x86.rs
crates/garble/: Cargo.toml
crates/garble-core/: Cargo.toml
crates/garble-core/benches/: evaluate.rs  evaluator_hg.rs  evaluator_th.rs  garble.rs  garbler_hg.rs  garbler_th.rs
crates/garble-core/src/: auth_eval.rs  auth_gen.rs  circuit.rs  evaluator.rs  fpre.rs  garbler.rs  lib.rs  store.rs  view.rs
crates/garble-core/src/half_gates/: evaluator.rs  garbler.rs  mod.rs  tests.rs
crates/garble-core/src/store/: auth_eval.rs  auth_gen.rs  evaluator.rs  garbler.rs
crates/garble-core/src/three_halves/: circuit.rs  control.rs  evaluator.rs  garbler.rs  garbler_tables.rs  matrices.rs  mod.rs  random_bits.rs  slicing.rs  tests.rs
crates/garble/benches/: authenticated.rs  evaluator.rs  evaluator_hg.rs  evaluator_th.rs  garbler.rs  garbler_hg.rs  garbler_th.rs  semihonest.rs
crates/garble/src/: auth_eval.rs  evaluator.rs  garbler.rs  lib.rs  store.rs
crates/garble/src/half_gates/: mod.rs
crates/garble/src/protocol/: semihonest.rs
crates/garble/src/store/: auth_eval.rs  auth_gen.rs  evaluator.rs  garbler.rs
crates/hash/: Cargo.toml
crates/hash/src/: blake3.rs  keccak256.rs  lib.rs  sha256.rs
crates/ideal-vm/: Cargo.toml
crates/ideal-vm/src/: lib.rs  store.rs  view.rs  vm.rs
crates/lpn-estimator/: Cargo.toml  README.md
crates/lpn-estimator/benches/: throughput.rs
crates/lpn-estimator/lpnestimator.com/: estimator.py
crates/lpn-estimator/src/: lib.rs  lpn.rs
crates/memory-core/: Cargo.toml
crates/memory-core-new/: Cargo.toml
crates/memory-core-new/src/: lib.rs  state.rs
crates/memory-core/src/: binary.rs  correlated.rs  decode.rs  lib.rs  store.rs  view.rs
crates/mpz-common/: Cargo.toml
crates/mpz-common/benches/: io.rs
crates/mpz-common/src/: context.rs  cpu.rs  future.rs  id.rs  ideal.rs  io.rs  lib.rs  mux.rs  task.rs
crates/mpz-common/src/context/: mt.rs  (+2 more)
crates/mpz-garble/: Cargo.toml
crates/mpz-garble-core/: Cargo.toml
crates/mpz-garble-core/benches/: garble.rs
crates/mpz-garble-core/src/: auth_eval.rs  auth_gen.rs  circuit.rs  evaluator.rs  fpre.rs  garbler.rs  generator.rs  lib.rs  store.rs  view.rs
crates/mpz-garble/benches/: authenticated.rs  semihonest.rs
crates/mpz-garble/src/: auth_eval.rs  auth_gen.rs  evaluator.rs  garbler.rs  generator.rs  lib.rs  protocol.rs  store.rs
crates/mpz-memory-core/: Cargo.toml
crates/mpz-memory-core/src/: binary.rs  correlated.rs  decode.rs  lib.rs  store.rs  view.rs
crates/mpz-ole-core/: Cargo.toml
crates/mpz-ole-core/src/: adjust.rs  ideal.rs  lib.rs  msg.rs  receiver.rs  role.rs  sender.rs  test.rs
crates/mpz-share-conversion/: Cargo.toml
crates/mpz-share-conversion-core/: Cargo.toml
crates/mpz-share-conversion-core/src/: a2m.rs  ideal.rs  lib.rs  m2a.rs  msgs.rs  receiver.rs  sender.rs
crates/mpz-share-conversion/src/: error.rs  ideal.rs  lib.rs  receiver.rs  sender.rs  test.rs
crates/mpz-vm-core/: Cargo.toml
crates/mpz-vm-core/src/: call.rs  decode.rs  error.rs  lib.rs  otp.rs
crates/mpz-zk/: Cargo.toml
crates/mpz-zk-core/: Cargo.toml
crates/mpz-zk-core/benches/: zk.rs
crates/mpz-zk-core/src/: check.rs  lib.rs  prover.rs  store.rs  verifier.rs  view.rs  vole.rs
crates/mpz-zk/benches/: zk.rs
crates/mpz-zk/src/: lib.rs  prover.rs  verifier.rs
crates/ole-core/: Cargo.toml
crates/ole-core/benches/: ole.rs
crates/ole-core/src/: adjust.rs  dhim.rs  gilboa.rs  ideal.rs  lib.rs  receiver.rs  role.rs  sender.rs  test.rs
crates/perm-proof-core/: Cargo.toml
crates/perm-proof-core/benches/: prover.rs  verifier.rs
crates/perm-proof-core/src/: lib.rs  prover.rs  test_utils.rs  verifier.rs
crates/perm-proof-core/tests/: api.rs
crates/poly-proof-core/: Cargo.toml  build.rs
crates/poly-proof-core/benches/: prover.rs  verifier.rs
crates/poly-proof-core/src/: circuit.rs  constraint.rs  fixture.rs  kernel.rs  lib.rs  prover.rs  soundness.rs  subfield.rs  test_utils.rs  verifier.rs
(+702 files in other folders)
