[workspace]
members = [
    "crates/core",
    "crates/common",
    "crates/fields",
    "crates/circuits",
    "crates/circuits-core",
    "crates/circuits-data",
    "crates/cointoss",
    "crates/cointoss-core",
    "crates/hash",
    "crates/ideal-vm",
    "crates/ot",
    "crates/ot-core",
    "crates/garble",
    "crates/garble-core",
    "crates/share-conversion-core",
    "crates/share-conversion",
    "crates/matrix-transpose",
    "crates/clmul",
    "crates/ole-core",
    "crates/ole",
    "crates/memory-core",
    "crates/vm-core",
    "crates/zk-core",
    "crates/zk",
    "crates/wasm-bench",
]
exclude = ["crates/lpn-estimator"]
resolver = "2"

[workspace.package]
rust-version = "1.95"

[profile.release]
lto = true

[profile.wasm]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1

[workspace.lints.rust]
# unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(clmul_armv8)",
    "cfg(clmul_force_soft)",
] }

[workspace.lints.clippy]
# enum_glob_use = "deny"

[workspace.dependencies]
mpz-core = { path = "crates/core" }
mpz-common = { path = "crates/common" }
mpz-fields = { path = "crates/fields" }
mpz-circuits = { path = "crates/circuits" }
mpz-circuits-core = { path = "crates/circuits-core" }
mpz-circuits-data = { path = "crates/circuits-data" }
mpz-cointoss = { path = "crates/cointoss" }
mpz-cointoss-core = { path = "crates/cointoss-core" }
mpz-ot = { path = "crates/ot" }
mpz-ot-core = { path = "crates/ot-core" }
mpz-garble = { path = "crates/garble" }
mpz-garble-core = { path = "crates/garble-core" }
mpz-hash = { path = "crates/hash" }
mpz-ideal-vm = { path = "crates/ideal-vm" }
mpz-share-conversion-core = { path = "crates/share-conversion-core" }
mpz-ole = { path = "crates/ole" }
mpz-ole-core = { path = "crates/ole-core" }
mpz-memory-core = { path = "crates/memory-core" }
mpz-vm-core = { path = "crates/vm-core" }
mpz-zk-core = { path = "crates/zk-core" }
mpz-zk = { path = "crates/zk" }
clmul = { path = "crates/clmul" }
matrix-transpose = { path = "crates/matrix-transpose" }
rangeset = "0.4"

# rand
rand_chacha = "0.10"
rand = "0.10"
rand_core = "0.10"

# crypto
cipher = "0.5"
sha2 = "0.11"
blake3 = "1.8"
aes = "0.9"
ctr = "0.10"
curve25519-dalek = "5.0.0-pre.6"
p256 = "0.13"
ghash_rc = { package = "ghash", version = "0.6" }
ark-ff = "0.6"
ark-secp256r1 = "0.6"
num-bigint = "0.4"
keccak = "0.2"

# async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
pollster = "0.4"
pin-project-lite = "0.2"

# serialization
ark-serialize = "0.6"
serde = "1.0"
serde_arrays = "0.2"
bincode = "1.3.3"
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }
zerocopy = "0.8"
serio = { version = "0.2" }

# testing
rstest = "0.26"
pretty_assertions = "1"
criterion = { version = "0.8", default-features = false }

# config
cfg-if = "1"
cpufeatures = "0.3"

# error/log
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
opaque-debug = "0.3"

# misc
regex = "1"
rayon = "1"
derive_builder = "0.20"
once_cell = "1"
hybrid-array = "0.4"
typenum = "1"
itybity = "0.3"
enum-try-as-inner = "0.1.0"
bitvec = "1.0"
hashbrown = "0.17"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
async-task = "4"
bcs = "0.2"
sha3 = "0.12"

# wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = "0.3"
web-spawn = "0.3"
getrandom = "0.4"
aes-wasm = "0.1"

# http / runner
chromiumoxide = "0.9"
serde_json = "1.0"
hyper = "1"
hyper-util = "0.1"
http-body-util = "0.1"
mime_guess = "2.0"
