[workspace]
members = [
    "crates/core",
    "crates/common",
    "crates/fields",
    "crates/circuits",
    "crates/circuits-new",
    "crates/circuits-core",
    "crates/circuits-data",
    "crates/cointoss",
    "crates/cointoss-core",
    "crates/hash",
    "crates/ideal-vm",
    "crates/ot",
    "crates/ot-core",
    "crates/garble",
    "crates/garble-core",
    "crates/share-conversion-core",
    "crates/share-conversion",
    "crates/matrix-transpose",
    "crates/clmul",
    "crates/ole-core",
    "crates/ole",
    "crates/memory-core",
    "crates/vm-core",
    "crates/zk-core",
    "crates/zk-core-new",
    "crates/zk",
    "crates/vole-core",
    "crates/wasm-bench",
    "crates/vm-ir",
    "crates/vm-core-new",
    "crates/vm-test-harness",
    "crates/vm-ideal",
    "crates/vm-memory",
    "crates/vm-circuits",
    "crates/vm-zk",
]
exclude = ["crates/lpn-estimator", "crates/vm-bench-guests/sha256"]
resolver = "2"

[workspace.package]
rust-version = "1.95"

[profile.release]
lto = true

[profile.wasm]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1

[workspace.lints.rust]
# unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(clmul_armv8)",
    "cfg(clmul_force_soft)",
] }

[workspace.lints.clippy]
# enum_glob_use = "deny"

[workspace.dependencies]
mpz-core = { path = "crates/core" }
mpz-common = { path = "crates/common" }
mpz-fields = { path = "crates/fields" }
mpz-circuits = { path = "crates/circuits" }
mpz-circuits-new = { path = "crates/circuits-new" }
mpz-circuits-core = { path = "crates/circuits-core" }
mpz-circuits-data = { path = "crates/circuits-data" }
mpz-cointoss = { path = "crates/cointoss" }
mpz-cointoss-core = { path = "crates/cointoss-core" }
mpz-ot = { path = "crates/ot" }
mpz-ot-core = { path = "crates/ot-core" }
mpz-garble = { path = "crates/garble" }
mpz-garble-core = { path = "crates/garble-core" }
mpz-hash = { path = "crates/hash" }
mpz-ideal-vm = { path = "crates/ideal-vm" }
mpz-share-conversion-core = { path = "crates/share-conversion-core" }
mpz-ole = { path = "crates/ole" }
mpz-ole-core = { path = "crates/ole-core" }
mpz-memory-core = { path = "crates/memory-core" }
mpz-vm-core = { path = "crates/vm-core" }
mpz-zk-core = { path = "crates/zk-core" }
mpz-zk-core-new = { path = "crates/zk-core-new" }
mpz-zk = { path = "crates/zk" }
mpz-vole-core = { path = "crates/vole-core" }
mpz-vm-ir = { path = "crates/vm-ir" }
mpz-vm-core-new = { path = "crates/vm-core-new" }
mpz-vm-test-harness = { path = "crates/vm-test-harness" }
mpz-vm-ideal = { path = "crates/vm-ideal" }
mpz-vm-memory = { path = "crates/vm-memory" }
mpz-vm-circuits = { path = "crates/vm-circuits" }
mpz-vm-zk = { path = "crates/vm-zk" }
clmul = { path = "crates/clmul" }
matrix-transpose = { path = "crates/matrix-transpose" }
rangeset = "0.4"

# rand
rand_chacha = "0.9"
rand = "0.9"
rand_core = "0.9"
rand_core_06 = { package = "rand_core", version = "0.6" }
rand_08 = { package = "rand", version = "0.8" }

# crypto
cipher = "0.5.0-rc.1"
sha2 = "0.10"
blake3 = "1.8.2"
aes = "0.9.0-rc.1"
ctr = "0.9"
digest = "0.10"
curve25519-dalek = "4.1"
elliptic-curve = "0.14.0-rc.15"
merlin = "3"
p256 = "0.10"
ghash_rc = { package = "ghash", version = "0.6.0-rc.2" }
ark-ff = "0.4"
ark-secp256r1 = "0.4"
num-bigint = "0.4"
keccak = "0.1"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.23", default-features = false }
tokio-util = "0.7"
pollster = "0.3"
pin-project-lite = "0.2"

# serialization
ark-serialize = "0.4"
serde = "1.0"
serde_yaml = "0.9"
serde_arrays = "0.1"
bincode = "1.3.3"
bytes = "1"
yamux = "0.10"
zerocopy = { version = "0.8", features = ["derive"] }
serio = { version = "0.2" }

# testing
rstest = "0.12"
pretty_assertions = "1"
criterion = { version = "0.5", default-features = false }

# config
cfg-if = "1"
cpufeatures = "0.2"
rustversion = "1"

# error/log
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
opaque-debug = "0.3"

# wasm
wat = "1.219"
wasmparser = "0.219"

# misc
clap = "3"
regex = "1"
rayon = "1"
hex = "0.4"
lazy_static = "1"
derive_builder = "0.11"
once_cell = "1"
hybrid-array = "0.4"
typenum = "1"
itybity = "0.3.3"
enum-try-as-inner = "0.1.0"
bitvec = "1.0"
hashbrown = "0.14.5"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
async-task = "4"
