[package]
name = "mpz-circuits"
version = "0.1.0-alpha.4"
edition = "2024"

[lints]
workspace = true

[lib]
name = "mpz_circuits"

[features]
default = []
aes = ["mpz-circuits-data/aes"]
sha2 = ["mpz-circuits-data/sha2"]
blake3 = ["mpz-circuits-data/blake3"]

[dependencies]
mpz-circuits-core = { workspace = true }
mpz-circuits-data = { workspace = true }