[package]
name = "mpz-common"
version = "0.1.0-alpha.4"
edition = "2024"

[features]
default = []
executor = []
sync = ["tokio/sync"]
future = []
test-utils = ["uid-mux/test-utils", "tokio/io-util", "tokio-util/compat"]
ideal = ["tokio/sync"]

[dependencies]
futures.workspace = true
async-trait.workspace = true
bytes = { workspace = true }
pin-project-lite.workspace = true
thiserror.workspace = true
serio.workspace = true
uid-mux = { workspace = true }
serde = { workspace = true, features = ["derive"] }
pollster.workspace = true
cfg-if.workspace = true
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "net",
] }
tokio-util = { workspace = true, features = ["compat"] }
uid-mux = { workspace = true, features = ["test-utils"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
rstest = { workspace = true }
