[package]
name = "mpz-fields"
version = "0.1.0-alpha.5"
edition = "2024"
rust-version = "1.95"

[lints]
workspace = true

[lib]
name = "mpz_fields"

[dependencies]
mpz-core.workspace = true

rand.workspace = true
ark-ff.workspace = true
ark-secp256r1.workspace = true
ark-serialize.workspace = true
num-bigint.workspace = true
opaque-debug.workspace = true
serde.workspace = true
itybity.workspace = true
typenum.workspace = true
hybrid-array.workspace = true
thiserror.workspace = true
rand_08.workspace = true
zerocopy = { workspace = true, features = ["derive"] }
rayon = { workspace = true, optional = true }

[features]
# When enabled, `Field::inner_product` automatically parallelises across
# cores when the input is large enough to benefit (i.e. when the
# single-core sequential path would blow past L2 cache).
rayon = ["dep:rayon"]

[dev-dependencies]
ghash_rc.workspace = true
criterion.workspace = true

[[bench]]
name = "fields"
harness = false
