[package]
name = "mpz-garble-core"
version = "0.1.0-alpha.4"
edition = "2024"

[lints]
workspace = true

[lib]
name = "mpz_garble_core"

[features]
default = []
rayon = [
    "dep:rayon",
    "mpz-core/rayon",
    "mpz-ot-core/rayon",
    "itybity/rayon",
    "blake3/rayon",
]

[dependencies]
mpz-circuits = { workspace = true }
mpz-common = { workspace = true, features = ["future"] }
mpz-core = { workspace = true }
mpz-memory-core = { workspace = true }
mpz-ot-core = { workspace = true }
mpz-vm-core = { workspace = true }

aes = { workspace = true, features = [] }
bitvec = { workspace = true, features = ["serde"] }
blake3 = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true }
cfg-if = { workspace = true }
cipher = { workspace = true }
derive_builder = { workspace = true }
itybity = { workspace = true }
once_cell = { workspace = true }
opaque-debug = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
rangeset = { workspace = true, features = ["serde"] }
rayon = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_arrays = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
mpz-circuits = { workspace = true, features = ["aes"] }
mpz-ot-core = { workspace = true, features = ["test-utils"] }

rstest = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "garbler_hg"
harness = false

[[bench]]
name = "garbler_th"
harness = false

[[bench]]
name = "evaluator_hg"
harness = false

[[bench]]
name = "evaluator_th"
harness = false
