[package]
name = "mpz-garble"
version = "0.1.0-alpha.4"
edition = "2024"

[lints]
workspace = true

[lib]
name = "mpz_garble"

[features]
default = []
rayon = ["mpz-garble-core/rayon", "mpz-ot/rayon", "mpz-core/rayon"]
mock = ["mpz-ot/ideal"]

[dependencies]
mpz-circuits = { workspace = true }
mpz-common = { workspace = true, features = ["test-utils", "executor"] }
mpz-core = { workspace = true }
mpz-garble-core = { workspace = true }
mpz-memory-core = { workspace = true }
mpz-ot = { workspace = true }
mpz-vm-core = { workspace = true }
serio = { workspace = true }

async-trait = { workspace = true }
blake3 = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
opaque-debug = { workspace = true }
rand = { workspace = true }
rangeset = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
mpz-circuits = { workspace = true, features = ["aes"] }
mpz-common = { workspace = true, features = ["test-utils", "ideal"] }
mpz-ot = { workspace = true, features = ["ideal"] }
rstest = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[[bench]]
name = "evaluator_hg"
harness = false
required-features = ["mock"]

[[bench]]
name = "evaluator_th"
harness = false
required-features = ["mock"]

[[bench]]
name = "garbler_hg"
harness = false
required-features = ["mock"]

[[bench]]
name = "garbler_th"
harness = false
required-features = ["mock"]
