[package]
name = "mpz-hash"
version = "0.1.0-alpha.5"
edition = "2024"

[features]
default = ["sha256", "blake3", "keccak256"]
sha256 = ["mpz-circuits/sha2"]
blake3 = ["mpz-circuits/blake3", "dep:blake3"]
keccak256 = ["mpz-circuits/keccak"]

[dependencies]
mpz-core = { workspace = true }
mpz-circuits = { workspace = true }
mpz-vm-core = { workspace = true }

blake3 = { workspace = true, optional = true }
itybity = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mpz-common = { workspace = true, features = ["test-utils"] }
mpz-ideal-vm = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
sha2 = { workspace = true }
sha3 = { version = "0.10" }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[lints]
workspace = true
