[package]
name = "mpz-memory-core-new"
version = "0.1.0"
edition = "2024"

[dependencies]
mpz-fields = { workspace = true }
mpz-vm-ir = { workspace = true }
mpz-vm-core-new = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }

[lints]
workspace = true
