[package]
name = "mpz-memory-core"
version = "0.1.0-alpha.3"
edition = "2024"

[lints]
workspace = true

[dependencies]
mpz-core = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rangeset = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
itybity = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
mpz-ot-core = { workspace = true }
