[package]
name = "mpz-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
cpu = ["rayon"]
executor = ["cpu", "dep:uid-mux"]
sync = ["tokio/sync"]
future = []
test-utils = ["dep:uid-mux", "uid-mux/test-utils"]
ideal = ["tokio/sync"]
rayon = ["dep:rayon"]
force-st = []

[dependencies]
mpz-core.workspace = true

futures.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true
scoped-futures.workspace = true
thiserror.workspace = true
serio.workspace = true
uid-mux = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
pollster.workspace = true
rayon = { workspace = true, optional = true }
cfg-if.workspace = true
tokio = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["compat"] }
uid-mux = { workspace = true, features = ["test-utils"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
criterion.workspace = true
