[package]
name = "mpz-garble"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "mpz_garble"

[features]
default = ["mock"]
rayon = ["mpz-common/rayon", "mpz-garble-core/rayon"]
mock = ["mpz-ot/ideal"]

[dependencies]
mpz-circuits.workspace = true
mpz-common = { workspace = true, features = ["test-utils", "executor"] }
mpz-memory-core = { workspace = true }
mpz-ot.workspace = true
mpz-garble-core.workspace = true
mpz-core.workspace = true
mpz-vm-core = { workspace = true }
tlsn-utils.workspace = true
serio.workspace = true

async-trait.workspace = true
rand.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
itybity.workspace = true
tracing.workspace = true
opaque-debug.workspace = true
serde = { workspace = true, features = ["derive"] }
hashbrown = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
mpz-common = { workspace = true, features = ["test-utils", "ideal"] }
mpz-ot = { workspace = true, features = ["ideal"] }
rstest = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[[bench]]
name = "semihonest"
harness = false
