[package]
name = "mpz-share-conversion"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "mpz_share_conversion"

[features]
default = []
test-utils = ["mpz-share-conversion-core/test-utils"]

[dependencies]
mpz-core = { workspace = true }
mpz-common.workspace = true
mpz-share-conversion-core = { workspace = true }
mpz-fields.workspace = true
mpz-ole.workspace = true

thiserror.workspace = true
async-trait.workspace = true
serio.workspace = true
rand.workspace = true

[dev-dependencies]
mpz-share-conversion-core = { workspace = true, features = ["test-utils"] }
mpz-ole = { workspace = true, features = ["test-utils"] }
mpz-common = { workspace = true, features = [
    "executor",
    "test-utils",
    "ideal",
] }
mpz-core.workspace = true
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
