[package]
name = "mpz-ole-core"
version = "0.1.0-alpha.5"
edition = "2024"

[lib]
name = "mpz_ole_core"

[features]
default = []
test-utils = []

[dependencies]
rand.workspace = true
itybity.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
hybrid-array = { workspace = true, features = ["serde"] }

mpz-fields.workspace = true
mpz-core.workspace = true
mpz-ot-core.workspace = true
mpz-common = { workspace = true, features = ["future"] }

# dhim (malicious subquadratic OLE): big-integer CRT arithmetic + prime sampling.
crypto-bigint = { workspace = true }
crypto-primes = { workspace = true }

[dev-dependencies]
rand_chacha.workspace = true
criterion.workspace = true

[[bench]]
name = "ole"
harness = false
